--- a/src/software/ai/hl/stp/play/penalty_kick/BUILD
+++ b/src/software/ai/hl/stp/play/penalty_kick/BUILD
@@ -1,5 +1,6 @@
 package(default_visibility = ["//visibility:public"])
 
+load("@simulated_tests_deps//:requirements.bzl", "requirement")
 # We force linking for all plays so that the static variables required for the
 # "factory" design pattern to work are linked in
 # https://www.bfilipek.com/2018/02/static-vars-static-lib.html
@@ -37,18 +38,34 @@ cc_test(
     ],
 )
 
-cc_test(
+# cc_test(
+#     name = "penalty_kick_play_test",
+#     srcs = ["penalty_kick_play_test.cpp"],
+#     deps = [
+#         ":penalty_kick_play",
+#         "//shared/test_util:tbots_gtest_main",
+#         "//software/simulated_tests:simulated_er_force_sim_play_test_fixture",
+#         "//software/simulated_tests/non_terminating_validation_functions",
+#         "//software/simulated_tests/terminating_validation_functions",
+#         "//software/simulated_tests/validation:validation_function",
+#         "//software/test_util",
+#         "//software/time:duration",
+#         "//software/world",
+#     ],
+# )
+
+py_test(
     name = "penalty_kick_play_test",
-    srcs = ["penalty_kick_play_test.cpp"],
+    srcs = [
+        "penalty_kick_play_test.py",
+    ],
+    # TODO (#2619) Remove tag to run in parallel
+    tags = [
+        "exclusive",
+    ],
     deps = [
-        ":penalty_kick_play",
-        "//shared/test_util:tbots_gtest_main",
-        "//software/simulated_tests:simulated_er_force_sim_play_test_fixture",
-        "//software/simulated_tests/non_terminating_validation_functions",
-        "//software/simulated_tests/terminating_validation_functions",
-        "//software/simulated_tests/validation:validation_function",
-        "//software/test_util",
-        "//software/time:duration",
-        "//software/world",
+        "//software/simulated_tests:simulated_test_fixture",
+        "//software/simulated_tests:validation",
+        requirement("pytest"),
     ],
 )
